@@ -30,7 +30,7 @@ public class TestPostgreSQLTransformer {
     }
 
     @Test
-    public void testBuildSchemaNameFromTenant() throws Exception {
+    public void testBuildSchemaNameFromTenant() {
         String tenantName = "someService";
         String builtSchemaName = pgTransformer.buildSchemaName(tenantName);
         assertEquals("someservice", builtSchemaName);
@@ -74,7 +74,7 @@ public class TestPostgreSQLTransformer {
             assertEquals(expectedListOfFields, listOfFields.keySet());
 
             List<String> valuesForInsert = pgTransformer.getValuesForInsert(entity, listOfFields, 1562561734983L, "", false, false, ExportMode.EXPANDED);
-            assertTrue(valuesForInsert.get(0).contains("'{S_UseCase/S_Instance}'"));
+            assertTrue(valuesForInsert.getFirst().contains("'{S_UseCase/S_Instance}'"));
     }
 
     @Test
@@ -106,7 +106,7 @@ public class TestPostgreSQLTransformer {
 
         assertTrue(listOfFields.keySet().stream().noneMatch(key -> key.contains("ignoredattr")));
         // values for ignored attribute should not be in the values for insert
-        assertEquals(5, valuesForInsert.get(0).split(",").length);
+        assertEquals(5, valuesForInsert.getFirst().split(",").length);
     }
 
     @Test
@@ -127,7 +127,7 @@ public class TestPostgreSQLTransformer {
 
         assertTrue(listOfFields.keySet().stream().noneMatch(key -> key.contains("ignoredsubattr")));
         // values for ignored sub-attribute should not be in the values for insert
-        assertEquals(6, valuesForInsert.get(0).split(",").length);
+        assertEquals(6, valuesForInsert.getFirst().split(",").length);
     }
 
     @Test
@@ -149,7 +149,7 @@ public class TestPostgreSQLTransformer {
     @Test
     public void testListOfFieldsWithFlattenedObservations() throws IOException {
         String data = loadTestFile("entity-temporal.jsonld");
-        Entity entity = NgsiLdUtils.parseNgsiLdEntities(new JSONArray(data), ExportMode.FLATTEN).get(0);
+        Entity entity = NgsiLdUtils.parseNgsiLdEntities(new JSONArray(data), ExportMode.FLATTEN).getFirst();
 
         Map<String, PostgreSQLTransformer.POSTGRESQL_COLUMN_TYPES> typedFields =
             pgTransformer.listOfFields(entity, "urn:ngsi-ld:Dataset:", false, Collections.emptySet());
@@ -166,7 +166,7 @@ public class TestPostgreSQLTransformer {
     @CsvSource({"entity-temporal.jsonld, 4", "entity-notification.jsonld, 2"})
     public void testGetValuesForInsertWithFlattenedObservations(String filename, int expectedLines) throws IOException {
         String data = loadTestFile(filename);
-        Entity entity = NgsiLdUtils.parseNgsiLdEntities(new JSONArray(data), ExportMode.FLATTEN).get(0);
+        Entity entity = NgsiLdUtils.parseNgsiLdEntities(new JSONArray(data), ExportMode.FLATTEN).getFirst();
 
         Map<String, PostgreSQLTransformer.POSTGRESQL_COLUMN_TYPES> typedFields =
             pgTransformer.listOfFields(entity, "urn:ngsi-ld:Dataset:", false, Collections.emptySet());
@@ -179,5 +179,185 @@ public class TestPostgreSQLTransformer {
             false,
                 ExportMode.FLATTEN);
         assertEquals(expectedLines, values.size());
+    }
+
+    @Test
+    public void testListOfFieldsInfersDateTypeForIsoDateValue() {
+        ArrayList<Attribute> entityAttrs = new ArrayList<>();
+        entityAttrs.add(new Attribute("expirydate", "Property", "", "2023-02-16T00:00:00Z", null, null, "2023-02-16", false, new ArrayList<>()));
+        Entity entity = new Entity("someId", "someType", null, entityAttrs);
+
+        Map<String, PostgreSQLTransformer.POSTGRESQL_COLUMN_TYPES> listOfFields =
+            pgTransformer.listOfFields(entity, "", false, Collections.emptySet());
+
+        assertEquals(PostgreSQLTransformer.POSTGRESQL_COLUMN_TYPES.DATE, listOfFields.get("expirydate"));
+    }
+
+    @Test
+    public void testListOfFieldsInfersTimetzTypeForIsoTimeValue() {
+        ArrayList<Attribute> entityAttrs = new ArrayList<>();
+        entityAttrs.add(new Attribute("mytime", "Property", "", "2023-02-16T00:00:00Z", null, null, "10:30:00+00:00", false, new ArrayList<>()));
+        Entity entity = new Entity("someId", "someType", null, entityAttrs);
+
+        Map<String, PostgreSQLTransformer.POSTGRESQL_COLUMN_TYPES> listOfFields =
+            pgTransformer.listOfFields(entity, "", false, Collections.emptySet());
+
+        assertEquals(PostgreSQLTransformer.POSTGRESQL_COLUMN_TYPES.TIMETZ, listOfFields.get("mytime"));
+    }
+
+    @Test
+    public void testListOfFieldsInfersTimestamptzTypeForIsoDateTimeValue() {
+        ArrayList<Attribute> entityAttrs = new ArrayList<>();
+        entityAttrs.add(new Attribute("updatedat", "Property", "", "2023-02-16T00:00:00Z", null, null, "2023-02-16T10:30:00Z", false, new ArrayList<>()));
+        Entity entity = new Entity("someId", "someType", null, entityAttrs);
+
+        Map<String, PostgreSQLTransformer.POSTGRESQL_COLUMN_TYPES> listOfFields =
+            pgTransformer.listOfFields(entity, "", false, Collections.emptySet());
+
+        assertEquals(PostgreSQLTransformer.POSTGRESQL_COLUMN_TYPES.TIMESTAMPTZ, listOfFields.get("updatedat"));
+    }
+
+    @Test
+    public void testListOfFieldsInfersTextTypeForPlainStringValue() {
+        ArrayList<Attribute> entityAttrs = new ArrayList<>();
+        entityAttrs.add(new Attribute("label", "Property", "", "2023-02-16T00:00:00Z", null, null, "some text value", false, new ArrayList<>()));
+        Entity entity = new Entity("someId", "someType", null, entityAttrs);
+
+        Map<String, PostgreSQLTransformer.POSTGRESQL_COLUMN_TYPES> listOfFields =
+            pgTransformer.listOfFields(entity, "", false, Collections.emptySet());
+
+        assertEquals(PostgreSQLTransformer.POSTGRESQL_COLUMN_TYPES.TEXT, listOfFields.get("label"));
+    }
+
+    @Test
+    public void testListOfFieldsInfersJsonbTypeForJsonPropertyAttribute() {
+        ArrayList<Attribute> entityAttrs = new ArrayList<>();
+        entityAttrs.add(new Attribute("metadata", "JsonProperty", "", "2023-02-16T00:00:00Z", null, null, "{\"key\":\"value\"}", false, new ArrayList<>()));
+        Entity entity = new Entity("someId", "someType", null, entityAttrs);
+
+        Map<String, PostgreSQLTransformer.POSTGRESQL_COLUMN_TYPES> listOfFields =
+            pgTransformer.listOfFields(entity, "", false, Collections.emptySet());
+
+        assertEquals(PostgreSQLTransformer.POSTGRESQL_COLUMN_TYPES.JSONB, listOfFields.get("metadata"));
+    }
+
+    @Test
+    public void testListOfFieldsTruncatesUuidDatasetIdToFirstEightChars() {
+        ArrayList<Attribute> entityAttrs = new ArrayList<>();
+        entityAttrs.add(new Attribute(
+            "someAttr", "Property",
+            "urn:ngsi-ld:Dataset:550e8400-e29b-41d4-a716-446655440000",
+            "2023-02-16T00:00:00Z",
+            null, null, 12.0, false, new ArrayList<>()
+        ));
+        Entity entity = new Entity("someId", "someType", null, entityAttrs);
+
+        Map<String, PostgreSQLTransformer.POSTGRESQL_COLUMN_TYPES> listOfFields =
+            pgTransformer.listOfFields(entity, "urn:ngsi-ld:Dataset:", false, Collections.emptySet());
+
+        assertTrue(listOfFields.containsKey("someattr_550e8400"),
+            "Column name should use only the first 8 chars of the UUID datasetId");
+        assertFalse(listOfFields.keySet().stream().anyMatch(k -> k.startsWith("someattr_550e8400_")),
+            "Column name should not contain the full UUID");
+    }
+
+    @Test
+    public void testListOfFieldsKeepsNonUuidDatasetIdAsIs() {
+        ArrayList<Attribute> entityAttrs = new ArrayList<>();
+        entityAttrs.add(new Attribute(
+            "someAttr", "Property",
+            "urn:ngsi-ld:Dataset:k63_0to1meter",
+            "2023-02-16T00:00:00Z",
+            null, null, 12.0, false, new ArrayList<>()
+        ));
+        Entity entity = new Entity("someId", "someType", null, entityAttrs);
+
+        Map<String, PostgreSQLTransformer.POSTGRESQL_COLUMN_TYPES> listOfFields =
+            pgTransformer.listOfFields(entity, "urn:ngsi-ld:Dataset:", false, Collections.emptySet());
+
+        assertTrue(listOfFields.containsKey("someattr_k63_0to1meter"),
+            "Non-UUID datasetId should be kept without truncation");
+    }
+
+    @Test
+    public void testGetValuesForInsertWithSemiFlattenObservations() throws IOException {
+        String data = loadTestFile("entity-temporal-multi-attributes.jsonld");
+        Entity entity = NgsiLdUtils.parseNgsiLdEntities(new JSONArray(data), ExportMode.SEMI_FLATTEN).getFirst();
+
+        Map<String, PostgreSQLTransformer.POSTGRESQL_COLUMN_TYPES> typedFields =
+            pgTransformer.listOfFields(entity, "urn:ngsi-ld:Dataset:", false, Collections.emptySet());
+        List<String> values = pgTransformer.getValuesForInsert(
+            entity, typedFields, Instant.now().toEpochMilli(), "urn:ngsi-ld:Dataset:", false, true, ExportMode.SEMI_FLATTEN
+        );
+
+        // 4 datasetIds × 3 timestamps = 12 wateringProgram rows + 2 simpleAttribute rows = 14 rows total
+        // (static attrs with no observedAt are ignored since ignoreEmptyObservedAt=true)
+        assertEquals(14, values.size());
+    }
+
+    @Test
+    public void testGetValuesForInsertReturnsEmptyListWhenAllAttributesHaveNoObservedAtAndIgnoreIsTrue() {
+        ArrayList<Attribute> entityAttrs = new ArrayList<>();
+        entityAttrs.add(new Attribute("someAttr", "Property", "", "", null, null, "value", false, new ArrayList<>()));
+        Entity entity = new Entity("someId", "someType", null, entityAttrs);
+
+        Map<String, PostgreSQLTransformer.POSTGRESQL_COLUMN_TYPES> listOfFields =
+            pgTransformer.listOfFields(entity, "", false, Collections.emptySet());
+        List<String> values = pgTransformer.getValuesForInsert(
+            entity, listOfFields, Instant.now().toEpochMilli(), "", false, true, ExportMode.EXPANDED
+        );
+
+        assertTrue(values.isEmpty());
+    }
+
+    @Test
+    public void testInsertQueryReturnsFakeStatementWhenNoValuesToInsert() {
+        ArrayList<Attribute> entityAttrs = new ArrayList<>();
+        entityAttrs.add(new Attribute("someAttr", "Property", "", "", null, null, "value", false, new ArrayList<>()));
+        Entity entity = new Entity("someId", "someType", null, entityAttrs);
+
+        Map<String, PostgreSQLTransformer.POSTGRESQL_COLUMN_TYPES> listOfFields =
+            pgTransformer.listOfFields(entity, "", false, Collections.emptySet());
+        String sql = pgTransformer.insertQuery(
+            entity, Instant.now().toEpochMilli(), "public", "sometype", listOfFields, "", false, true, ExportMode.EXPANDED
+        );
+
+        assertEquals("select 1;", sql);
+    }
+
+    // P6 continued — referential entity behavior (all attributes have no observedAt)
+
+    @Test
+    public void testGetValuesForInsertProducesOneRowForReferentialEntityWhenIgnoreEmptyObservedAtIsFalse() {
+        // "referential entity" = all attributes have no observedAt (e.g. a school record)
+        // The fast-return guard (observedTimestamps.isEmpty()) does NOT trigger here because
+        // observedTimestamps = [""] (one empty-string key), not an empty list
+        ArrayList<Attribute> entityAttrs = new ArrayList<>();
+        entityAttrs.add(new Attribute("name", "Property", "", "", null, null, "Ecole de la Paix", false, new ArrayList<>()));
+        entityAttrs.add(new Attribute("address", "Property", "", "", null, null, "123 Rue de la Paix", false, new ArrayList<>()));
+        Entity entity = new Entity("urn:ngsi-ld:School:001", "School", null, entityAttrs);
+
+        Map<String, PostgreSQLTransformer.POSTGRESQL_COLUMN_TYPES> listOfFields =
+            pgTransformer.listOfFields(entity, "", false, Collections.emptySet());
+        List<String> values = pgTransformer.getValuesForInsert(
+            entity, listOfFields, Instant.now().toEpochMilli(), "", false, false, ExportMode.EXPANDED
+        );
+
+        assertEquals(1, values.size(),
+            "Referential entity must produce one row when ignoreEmptyObservedAt is false");
+    }
+
+    @Test
+    public void testGetValuesForInsertReturnsEmptyListOnlyForEntityWithZeroAttributes() {
+        // The fast-return guard fires only when the entity truly has no attributes at all
+        Entity entity = new Entity("someId", "someType", null, new ArrayList<>());
+
+        Map<String, PostgreSQLTransformer.POSTGRESQL_COLUMN_TYPES> listOfFields =
+            pgTransformer.listOfFields(entity, "", false, Collections.emptySet());
+        List<String> values = pgTransformer.getValuesForInsert(
+            entity, listOfFields, Instant.now().toEpochMilli(), "", false, false, ExportMode.EXPANDED
+        );
+
+        assertTrue(values.isEmpty(), "Entity with zero attributes should produce no rows");
     }
 }
